# x

./: pyproject.toml  setup.py
src/: main.py
x/: main.py
x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
